specs/blueprints/errors/validation/missing_item_value.eno
# Directly querying an item for a required but missing value 

-- input
field:
-
-- input

-- javascript
parse(input).field('field').items()[0].requiredStringValue();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->items()[0]->requiredStringValue();
-- php

-- python
enolib.parse(input).field('field').items()[0].required_string_value()
-- python

-- ruby
Enolib.parse(input).field('field').items.first.required_string_value
-- ruby

## ValidationError

-- text
The field 'field' may not contain empty items.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | -
-- snippet

selection: [1,1] => [1,1]

# Indirectly querying a field with empty items for required values

-- input
field:
-
-- input

-- javascript
parse(input).field('field').requiredStringValues();
-- javascript

-- php
Enolib\Parser::parse($input)->field('field')->requiredStringValues();
-- php

-- python
enolib.parse(input).field('field').required_string_values()
-- python

-- ruby
Enolib.parse(input).field('field').required_string_values
-- ruby

## ValidationError

-- text
The field 'field' may not contain empty items.
-- text

-- snippet
   Line | Content
      1 | field:
 >    2 | -
-- snippet

selection: [1,1] => [1,1]
